--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,6 +2,8 @@
   <head>
     <title>Shadcn Kit Template</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
+
     <!-- Initialize globals and Include ServiceNow's required scripts -->
     <sdk:now-ux-globals></sdk:now-ux-globals>
 
